methods.basics.Methods.scala.error
Erreur de compilation :
Methods:-7: error: Unmatched closing brace '}' ignored here
	}
        ^Methods:-6: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^Methods:0: error: illegal start of statement (no modifiers allowed here)
	override def run() { 
        ^