methods.basics.Methods.scala.code
var nbPas = 0
var Biscuit = false 

def goAndGet() {
  while (!Biscuit){
    if (!estSurBiscuit()){
        avance()
        nbPas = nbPas+1
    } else {
      Biscuit = true
    }
  
  }//
  prendBiscuit()
  for ( retour <- 1 to nbPas){
    recule()
  }
  poseBiscuit()
  }
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}